fixed a layout problem on a build page, introduced by making build list wider

--- a/public/stylesheets/cruisecontrol.css
+++ b/public/stylesheets/cruisecontrol.css
@@ -277,7 +277,7 @@ a.never_built, a.never_built:visited {
 }
 
 #build_details {
-  margin-left: 14em;
+  margin-left: 17em;
   padding-right: 1.5em;
 }
 
